Fixes home page navbar disappearing hamburger on mobile bug

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -11,7 +11,7 @@
 **********/
 
 html, body {
-  height: 100%;
+  height: 100vh;
   font-family: 'Raleway', sans-serif;
 }
 
@@ -73,9 +73,11 @@ section {
   transition: all ease 0.8s;
 }
 
+.icon-bar {
+  background-color: black;
+}
+
 .imgsize {
-  /*width: 520px;
-  height: 400px;*/
   width: 40vw;
 }
 
@@ -106,8 +108,6 @@ section {
 }
 
 .target-nav {
-  position: fixed;
   padding: 18px;
-  z-index: 10000;
   transition: background-color 0.1s ease 0s;
 }
