--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -86,10 +86,6 @@ p {
   color: red;
 }
 
-.iconBar {
-  color: black;
-}
-
 .item {
   padding-right: 40px;
 }
